--- a/css/component.css
+++ b/css/component.css
@@ -96,7 +96,7 @@
 
 /* Visibility control of elements */
 .fs-form-full .fs-fields > li,
-.fs-nav-dots, 
+.fs-nav-dots,
 .fs-progress,
 .fs-numbers,
 button.fs-continue,
@@ -279,7 +279,7 @@ button.fs-continue,
 	font-size: 1.2em;
 }
 
-.fs-fields .fs-radio-custom input[type="radio"] {
+.fs-fields .fs-checkbox-custom input[type="checkbox"] {
 	position: absolute;
 	display: block;
 	margin: 30px auto 20px;
@@ -290,7 +290,7 @@ button.fs-continue,
 	cursor: pointer;
 }
 
-.fs-fields > li .fs-radio-custom span {
+.fs-fields > li .fs-checkbox-custom span {
 	float: left;
 	position: relative;
 	margin-right: 3%;
@@ -303,21 +303,21 @@ button.fs-continue,
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.fs-fields > li .fs-radio-custom span label {
+.fs-fields > li .fs-checkbox-custom span label {
 	color: rgba(0,0,0,0.4);
 	-webkit-transition: color 0.3s;
 	transition: color 0.3s;
 }
 
-.fs-form-overview .fs-fields > li .fs-radio-custom span {
+.fs-form-overview .fs-fields > li .fs-checkbox-custom span {
 	max-width: 140px;
 }
 
-.fs-form-overview .fs-fields > li .fs-radio-custom span {
+.fs-form-overview .fs-fields > li .fs-checkbox-custom span {
 	font-size: 75%;
 }
 
-.fs-fields > li .fs-radio-custom label {
+.fs-fields > li .fs-checkbox-custom label {
 	display: block;
 	padding-top: 100%;
 	width: 100%;
@@ -325,7 +325,7 @@ button.fs-continue,
 	cursor: pointer;
 }
 
-.fs-fields .fs-radio-custom label::after {
+.fs-fields .fs-checkbox-custom label::after {
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -341,30 +341,42 @@ button.fs-continue,
 	-webkit-transform: translate(-50%,-50%);
 	transform: translate(-50%,-50%);
 }
-
-.fs-fields .fs-radio-custom label.radio-mobile::after {
-	background-image: url(../img/mobile.svg);
+.fs-fields .fs-checkbox-custom label.checkbox-television::after {
+	background-image: url(../img/television.svg);
 }
 
-.fs-fields .fs-radio-custom label.radio-social::after {
-	background-image: url(../img/social.svg);
+.fs-fields .fs-checkbox-custom label.checkbox-radio::after {
+	background-image: url(../img/radio.svg);
 }
 
-.fs-fields .fs-radio-custom label.radio-conversion::after {
-	background-image: url(../img/conversion.svg);
+.fs-fields .fs-checkbox-custom label.checkbox-print::after {
+	background-image: url(../img/print.svg);
 }
 
-.fs-fields .fs-radio-custom label:hover::after,
-.fs-fields input[type="radio"]:focus + label::after,
-.fs-fields input[type="radio"]:checked + label::after {
+.fs-fields .fs-checkbox-custom label.checkbox-digital::after {
+	background-image: url(../img/digital.svg);
+}
+
+.fs-fields .fs-checkbox-custom label.checkbox-signage::after {
+	background-image: url(../img/signage.svg);
+}
+
+.fs-fields .fs-checkbox-custom label.checkbox-other::after {
+	background-image: url(../img/other.svg);
+}
+
+
+.fs-fields .fs-checkbox-custom label:hover::after,
+.fs-fields input[type="checkbox"]:focus + label::after,
+.fs-fields input[type="checkbox"]:checked + label::after {
 	opacity: 1;
 }
 
-.fs-fields .fs-radio-custom input[type="radio"]:checked + label {
+.fs-fields .fs-checkbox-custom input[type="checkbox"]:checked + label {
 	color: #fffed8;
 }
 
-.fs-form-overview .fs-fields .fs-radio-custom input[type="radio"]:checked + label {
+.fs-form-overview .fs-fields .fs-checkbox-custom input[type="checkbox"]:checked + label {
 	color: rgba(0,0,0,0.8);
 }
 
@@ -836,32 +848,7 @@ input[type=text]::-ms-clear {
 		right: 25px;
 	}
 
-	button.fs-continue {
-		right: 20px;
-		bottom: 20px;
-		margin: 0;
-		padding: 50px 0 0 50px;
-		width: 50px;
-		height: 50px;
-		border-radius: 50%;
-		font-size: 2em;
-	}
 
-	button.fs-continue::before {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		content: '\27A1';
-		text-align: center;
-		font-size: 1em;
-		line-height: 50px;
-	}
-
-	.fs-continue::after {
-		content: '';
-	}
 
 	button.fs-submit {
 		width: 100%;
