--- a/css/demo.css
+++ b/css/demo.css
@@ -76,6 +76,13 @@ a:hover, a:focus {
 	content: "\e003";
 }
 
+.codrops-icon-info span {
+	max-width: 75%;
+	z-index: 200;
+	background-color: #3b3f45;
+	padding: 1em !important; 
+}
+
 .codrops-icon span {
 	display: none;
 	position: absolute;
