--- a/css/component.css
+++ b/css/component.css
@@ -3,7 +3,7 @@
 	position: relative;
 	width: 100%;
 	height: 100%;
-	color: #fff;
+	color: #3b3f45;
 }
 
 .overview .fs-form-wrap {
@@ -244,7 +244,7 @@ button.fs-continue,
 	border: none;
 	border-bottom: 2px solid rgba(0,0,0,0.2);
 	background-color: transparent;
-	color: #fffed8;
+	color: #aec9cc;
 	text-overflow: ellipsis;
 	font-weight: bold;
 	font-size: 1.5em;
@@ -268,11 +268,11 @@ button.fs-continue,
 }
 
 .fs-fields input:focus {
-	background-color: #3b3f45; /* Fixes chrome bug with placeholder */
+	background-color: #fff; /* Fixes chrome bug with placeholder */
 }
 
 .fs-form-overview .fs-fields input:focus {
-	background-color: #fffed8; /* Fixes chrome bug with placeholder */
+	background-color: #aec9cc; /* Fixes chrome bug with placeholder */
 }
 
 .fs-form-overview .fs-fields input {
@@ -373,7 +373,7 @@ button.fs-continue,
 }
 
 .fs-fields .fs-checkbox-custom input[type="checkbox"]:checked + label {
-	color: #fffed8;
+	color: #aec9cc;
 }
 
 .fs-form-overview .fs-fields .fs-checkbox-custom input[type="checkbox"]:checked + label {
@@ -386,7 +386,7 @@ button.fs-continue,
 	height: 200px;
 	border: 2px solid rgba(0,0,0,0.2);
 	background-color: transparent;
-	color: #fffed8;
+	color: #aec9cc;
 	font-weight: 700;
 	font-size: 0.85em;
 	resize: none;
@@ -407,7 +407,7 @@ button.fs-continue,
 }
 
 .fs-form-overview .fs-fields textarea:focus {
-	background: #fffed8;
+	background: #aec9cc;
 }
 
 .fs-form div.cs-select.cs-skin-boxes {
@@ -518,7 +518,7 @@ button.fs-continue,
 
 .fs-nav-dots button:hover::before,
 .fs-nav-dots button.fs-dot-current::before {
-	background: #fffed8;
+	background: #aec9cc;
 }
 
 /* Progress bar */
@@ -527,7 +527,7 @@ button.fs-continue,
 	top: 0;
 	width: 0%;
 	height: 0.5em;
-	background: #fffed8;
+	background: #aec9cc;
 	-webkit-transition: width 0.3s ease-in-out;
 	transition: width 0.3s ease-in-out;
 }
